Tree02/src/tree02/genGrammar2Parser.java
// Generated from genGrammar2.g4 by ANTLR 4.5.3

        package tree02;
        import java.util.*;
        import java.lang.*;
        import java.io.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class genGrammar2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		End=1, Function=2, Break=3, Case=4, Else=5, ElseIf=6, For=7, If=8, Return=9, 
		Switch=10, While=11, Global=12, Try=13, Catch=14, Continue=15, MLock=16, 
		Strcat=17, Disp=18, Num2str=19, Feval=20, Nargout=21, LeftParen=22, RightParen=23, 
		LeftBracket=24, RightBracket=25, LeftBrace=26, RightBrace=27, Less=28, 
		LessEqual=29, Greater=30, GreaterEqual=31, Plus=32, Minus=33, Star=34, 
		Div=35, And=36, Or=37, AndAnd=38, OrOr=39, Caret=40, Not=41, Tilde=42, 
		At=43, Question=44, Colon=45, Semi=46, Comma=47, Point=48, Assign=49, 
		StarAssign=50, DivAssign=51, ModAssign=52, PlusAssign=53, MinusAssign=54, 
		TildaAssign=55, Equal=56, NotEqual=57, ID=58, CONST=59, Int=60, DigitSequence=61, 
		StringLit=62, WHITESPACE=63, COMMENT=64, NEWLINE=65, ELLIPSIS=66;
	public static final int
		RULE_genGrammar2 = 0, RULE_prog = 1, RULE_program = 2, RULE_newFunc = 3, 
		RULE_declaration = 4, RULE_funcName = 5, RULE_varSet = 6, RULE_varSet2 = 7, 
		RULE_compound = 8, RULE_compoundIn = 9, RULE_statement = 10, RULE_outputStatement = 11, 
		RULE_noErrorStatement = 12, RULE_labeledStatement = 13, RULE_expressionStatement = 14, 
		RULE_selectionStatement = 15, RULE_iterationStatement = 16, RULE_forCondition = 17, 
		RULE_varName = 18, RULE_jumpStatement = 19, RULE_functionStatement = 20, 
		RULE_constantExpression = 21, RULE_expression = 22, RULE_concatStr = 23, 
		RULE_assignmentOperator = 24, RULE_logicalOrExpression = 25, RULE_logicalAndExpression = 26, 
		RULE_inclusiveOrExpression = 27, RULE_exclusiveOrExpression = 28, RULE_andExpression = 29, 
		RULE_equalityExpression = 30, RULE_relationalExpression = 31, RULE_additiveExpression = 32, 
		RULE_multiplicativeExpression = 33, RULE_castExpression = 34, RULE_unaryExpression = 35, 
		RULE_postfixExpression = 36, RULE_argumentExpressionList = 37, RULE_argumentExpressionList2 = 38, 
		RULE_primaryExpression = 39, RULE_unaryOperator = 40;
	public static final String[] ruleNames = {
		"genGrammar2", "prog", "program", "newFunc", "declaration", "funcName", 
		"varSet", "varSet2", "compound", "compoundIn", "statement", "outputStatement", 
		"noErrorStatement", "labeledStatement", "expressionStatement", "selectionStatement", 
		"iterationStatement", "forCondition", "varName", "jumpStatement", "functionStatement", 
		"constantExpression", "expression", "concatStr", "assignmentOperator", 
		"logicalOrExpression", "logicalAndExpression", "inclusiveOrExpression", 
		"exclusiveOrExpression", "andExpression", "equalityExpression", "relationalExpression", 
		"additiveExpression", "multiplicativeExpression", "castExpression", "unaryExpression", 
		"postfixExpression", "argumentExpressionList", "argumentExpressionList2", 
		"primaryExpression", "unaryOperator"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'end'", "'function'", "'break'", "'case'", "'else'", "'elseif'", 
		"'for'", "'if'", "'return'", "'switch'", "'while'", "'global'", "'try'", 
		"'catch'", "'continue'", "'mlock'", "'strcat'", "'disp'", "'num2str'", 
		"'feval'", "'nargout'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", 
		"'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'&&'", 
		"'||'", "'^'", "'!'", "'~'", "'@'", "'?'", "':'", "';'", "','", "'.'", 
		"'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'~='", "'=='", "'!='", 
		null, null, null, null, null, null, null, null, "'...'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "End", "Function", "Break", "Case", "Else", "ElseIf", "For", "If", 
		"Return", "Switch", "While", "Global", "Try", "Catch", "Continue", "MLock", 
		"Strcat", "Disp", "Num2str", "Feval", "Nargout", "LeftParen", "RightParen", 
		"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", 
		"Greater", "GreaterEqual", "Plus", "Minus", "Star", "Div", "And", "Or", 
		"AndAnd", "OrOr", "Caret", "Not", "Tilde", "At", "Question", "Colon", 
		"Semi", "Comma", "Point", "Assign", "StarAssign", "DivAssign", "ModAssign", 
		"PlusAssign", "MinusAssign", "TildaAssign", "Equal", "NotEqual", "ID", 
		"CONST", "Int", "DigitSequence", "StringLit", "WHITESPACE", "COMMENT", 
		"NEWLINE", "ELLIPSIS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "genGrammar2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		public String memory = new String("");
	                    public String dop = new String("");

	public genGrammar2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GenGrammar2Context extends ParserRuleContext {
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public TerminalNode EOF() { return getToken(genGrammar2Parser.EOF, 0); }
		public GenGrammar2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genGrammar2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterGenGrammar2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).exitGenGrammar2(this);
		}
	}

	public final GenGrammar2Context genGrammar2() throws RecognitionException {
		GenGrammar2Context _localctx = new GenGrammar2Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_genGrammar2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			prog();
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public ProgramContext program;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			((ProgContext)_localctx).program = program();
			memory = ((ProgContext)_localctx).program.value;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public String value;
		public CompoundContext compound;
		public NewFuncContext newFunc;
		public CompoundContext compound() {
			return getRuleContext(CompoundContext.class,0);
		}
		public NewFuncContext newFunc() {
			return getRuleContext(NewFuncContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program);
		try {
			setState(94);
			switch (_input.LA(1)) {
			case EOF:
			case Break:
			case Case:
			case For:
			case If:
			case Return:
			case Switch:
			case While:
			case Global:
			case Try:
			case Continue:
			case MLock:
			case Strcat:
			case Disp:
			case Num2str:
			case LeftParen:
			case LeftBracket:
			case Plus:
			case Minus:
			case Star:
			case Not:
			case Tilde:
			case ID:
			case CONST:
			case DigitSequence:
			case StringLit:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				((ProgramContext)_localctx).compound = compound();
				((ProgramContext)_localctx).value = ((ProgramContext)_localctx).compound.value;
				}
				break;
			case Function:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				((ProgramContext)_localctx).newFunc = newFunc();
				((ProgramContext)_localctx).value = ((ProgramContext)_localctx).newFunc.value;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewFuncContext extends ParserRuleContext {
		public String value;
		public DeclarationContext dec;
		public CompoundInContext c;
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public CompoundInContext compoundIn() {
			return getRuleContext(CompoundInContext.class,0);
		}
		public NewFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterNewFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).exitNewFunc(this);
		}
	}

	public final NewFuncContext newFunc() throws RecognitionException {
		NewFuncContext _localctx = new NewFuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_newFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			((NewFuncContext)_localctx).dec = declaration();
			setState(97);
			((NewFuncContext)_localctx).c = compoundIn();
			setState(99);
			_la = _input.LA(1);
			if (_la==End) {
				{
				setState(98);
				match(End);
				}
			}

			((NewFuncContext)_localctx).value =  ((NewFuncContext)_localctx).dec.value + ((NewFuncContext)_localctx).c.value + "\n    return " + ((NewFuncContext)_localctx).dec.vars;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public String value;
		public String vars;
		public VarSet2Context v1;
		public FuncNameContext v2;
		public VarSetContext v3;
		public VarSet2Context varSet2() {
			return getRuleContext(VarSet2Context.class,0);
		}
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public VarSetContext varSet() {
			return getRuleContext(VarSetContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(Function);
			setState(105);
			_la = _input.LA(1);
			if (_la==LeftBracket) {
				{
				setState(104);
				match(LeftBracket);
				}
			}

			setState(107);
			((DeclarationContext)_localctx).v1 = varSet2(0);
			setState(109);
			_la = _input.LA(1);
			if (_la==RightBracket) {
				{
				setState(108);
				match(RightBracket);
				}
			}

			setState(111);
			match(Assign);
			setState(112);
			((DeclarationContext)_localctx).v2 = funcName();
			setState(113);
			match(LeftParen);
			setState(114);
			((DeclarationContext)_localctx).v3 = varSet(0);
			setState(115);
			match(RightParen);
			((DeclarationContext)_localctx).value =  "def " + ((DeclarationContext)_localctx).v2.value + "(" + ((DeclarationContext)_localctx).v3.value + "):"; ((DeclarationContext)_localctx).vars =  ((DeclarationContext)_localctx).v1.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncNameContext extends ParserRuleContext {
		public String value;
		public Token name1;
		public TerminalNode ID() { return getToken(genGrammar2Parser.ID, 0); }
		public FuncNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterFuncName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).exitFuncName(this);
		}
	}

	public final FuncNameContext funcName() throws RecognitionException {
		FuncNameContext _localctx = new FuncNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			((FuncNameContext)_localctx).name1 = match(ID);
			((FuncNameContext)_localctx).value =  (((FuncNameContext)_localctx).name1!=null?((FuncNameContext)_localctx).name1.getText():null);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarSetContext extends ParserRuleContext {
		public String value;
		public VarSetContext v1;
		public VarNameContext varName;
		public VarNameContext v2;
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public VarSetContext varSet() {
			return getRuleContext(VarSetContext.class,0);
		}
		public VarSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterVarSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).exitVarSet(this);
		}
	}

	public final VarSetContext varSet() throws RecognitionException {
		return varSet(0);
	}

	private VarSetContext varSet(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VarSetContext _localctx = new VarSetContext(_ctx, _parentState);
		VarSetContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_varSet, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(122);
			((VarSetContext)_localctx).varName = varName();
			((VarSetContext)_localctx).value =  "*" + ((VarSetContext)_localctx).varName.value;
			}
			_ctx.stop = _input.LT(-1);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VarSetContext(_parentctx, _parentState);
					_localctx.v1 = _prevctx;
					_localctx.v1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_varSet);
					setState(125);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(126);
					match(Comma);
					setState(127);
					((VarSetContext)_localctx).v2 = ((VarSetContext)_localctx).varName = varName();
					((VarSetContext)_localctx).value =  ((VarSetContext)_localctx).v1.value + "," + "*" + ((VarSetContext)_localctx).v2.value;
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarSet2Context extends ParserRuleContext {
		public String value;
		public VarSet2Context v1;
		public VarNameContext varName;
		public VarNameContext v2;
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public VarSet2Context varSet2() {
			return getRuleContext(VarSet2Context.class,0);
		}
		public VarSet2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varSet2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof genGrammar2Listener ) ((genGrammar2Listener)listener).enterVarSet2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
